# ekutils

./: .gitlab-ci.yml  README.md  meson.build
include/: meson.build
include/ekutils/: arguments.hpp  bag.hpp  beside.hpp  callable.hpp  cli.hpp  connection_info.hpp  delegate.hpp  descriptor.hpp  dynamic.hpp  epoll_d.hpp  event_d.hpp  expandbuff.hpp  file_d.hpp  finally.hpp  fs_listener.hpp  idgen.hpp  imem_stream.hpp  in_stream.hpp  in_stream_d.hpp  inotify_d.hpp  io_stream.hpp  io_stream_d.hpp  ip_filter.hpp  ip_space.hpp  lateinit.hpp  lazy.hpp  listener_socket_d.hpp  log.hpp  mutex_atomic.hpp  omem_stream.hpp  out_stream.hpp  out_stream_d.hpp  parse_essentials.hpp  pipe_d.hpp  pocket.hpp  primitives.hpp  process.hpp  property.hpp  putil.hpp  reader.hpp  (+16 more)
src/: arguments.cpp  cli.cpp  connection_info.cpp  descriptor.cpp  dynamic.cpp  epoll_d.cpp  event_d.cpp  expandbuff.cpp  file_d.cpp  fs_listener.cpp  imem_stream.cpp  in_stream_d.cpp  inotify_d.cpp  ip_space.cpp  listener_socket_d.cpp  log.cpp  meson.build  net_utils.cpp  net_utils.hpp  omem_stream.cpp  open_listener.cpp  open_listener.hpp  out_stream_d.cpp  parse_essentials.cpp  pipe_d.cpp  process.cpp  reader.cpp  reallobuf.cpp  resolver.cpp  signal_d.cpp  socket_d.cpp  stderr_d.cpp  stdin_d.cpp  stdout_d.cpp  stream_socket_d.cpp  sys_error.cpp  sys_error.hpp  tcp_d.cpp  timer_d.cpp  udp_d.cpp  (+4 more)
test/: arguments_test.cpp  cli.cpp  delegate.cpp  dynamic.cpp  event_d_test.cpp  fs_watcher.cpp  inotify.cpp  logs.cpp  memstream.cpp  meson.build  network_test.cpp  property.cpp  reader.cpp  reallobuffer.cpp  sh_process.cpp  smth_to_read.hpp  space_test.cpp  uri_test.cpp  util.cpp  writer_test.cpp
