includes = include_directories('.')

install_headers([
  'ekutils/arguments.hpp',
  'ekutils/cli.hpp',
  'ekutils/delegate.hpp',
  'ekutils/descriptor.hpp',
  'ekutils/dynamic.hpp',
  'ekutils/epoll_d.hpp',
  'ekutils/event_d.hpp',
  'ekutils/expandbuff.hpp',
  'ekutils/file_d.hpp',
  'ekutils/fs_listener.hpp',
  'ekutils/idgen.hpp',
  'ekutils/imem_stream.hpp',
  'ekutils/in_stream.hpp',
  'ekutils/in_stream_d.hpp',
  'ekutils/inotify_d.hpp',
  'ekutils/io_stream.hpp',
  'ekutils/io_stream_d.hpp',
  'ekutils/lateinit.hpp',
  'ekutils/lazy.hpp',
  'ekutils/log.hpp',
  'ekutils/mutex_atomic.hpp',
  'ekutils/omem_stream.hpp',
  'ekutils/out_stream.hpp',
  'ekutils/out_stream_d.hpp',
  'ekutils/parse_essentials.hpp',
  'ekutils/pipe_d.hpp',
  'ekutils/pocket.hpp',
  'ekutils/primitives.hpp',
  'ekutils/process.hpp',
  'ekutils/property.hpp',
  'ekutils/finally.hpp',
  'ekutils/reader.hpp',
  'ekutils/reallobuf.hpp',
  'ekutils/resolver.hpp',
  'ekutils/signal_d.hpp',
  'ekutils/socket_d.hpp',
  'ekutils/stderr_d.hpp',
  'ekutils/stdin_d.hpp',
  'ekutils/stdout_d.hpp',
  'ekutils/tcp_d.hpp',
  'ekutils/timer_d.hpp',
  'ekutils/udp_d.hpp',
  'ekutils/unix_d.hpp',
  'ekutils/uri.hpp',
  'ekutils/uuid.hpp',
  'ekutils/writer.hpp'
], subdir : 'ekutils')
