includes = include_directories('.')

install_headers([
  'ekutils' / 'arguments.hpp',
  'ekutils' / 'bag.hpp',
  'ekutils' / 'beside.hpp',
  'ekutils' / 'callable.hpp',
  'ekutils' / 'cli.hpp',
  'ekutils' / 'dynamic.hpp',
  'ekutils' / 'expandbuff.hpp',
  'ekutils' / 'finally.hpp',
  'ekutils' / 'idgen.hpp',
  'ekutils' / 'lateinit.hpp',
  'ekutils' / 'lazy.hpp',
  'ekutils' / 'log.hpp',
  'ekutils' / 'mutex_atomic.hpp',
  'ekutils' / 'parse_essentials.hpp',
  'ekutils' / 'pocket.hpp',
  'ekutils' / 'primitives.hpp',
  'ekutils' / 'space.hpp',
  'ekutils' / 'uri.hpp',
  'ekutils' / 'uuid.hpp',
], subdir : 'ekutils')
