sources = files([
  'arguments.cpp',
  'cli.cpp',
  'descriptor.cpp',
  'dynamic.cpp',
  'epoll_d.cpp',
  'event_d.cpp',
  'expandbuff.cpp',
  'file_d.cpp',
  'fs_listener.cpp',
  'imem_stream.cpp',
  'in_stream_d.cpp',
  'inotify_d.cpp',
  'ip_space.cpp',
  'log.cpp',
  'net_utils.cpp',
  'omem_stream.cpp',
  'out_stream_d.cpp',
  'parse_essentials.cpp',
  'pipe_d.cpp',
  'process.cpp',
  'reader.cpp',
  'reallobuf.cpp',
  'resolver.cpp',
  'signal_d.cpp',
  'socket_d.cpp',
  'stderr_d.cpp',
  'stdin_d.cpp',
  'stdout_d.cpp',
  'sys_error.cpp',
  'tcp_d.cpp',
  'timer_d.cpp',
  'udp_d.cpp',
  'unix_d.cpp',
  'uri.cpp',
  'uuid.cpp',
  'writer.cpp'
])

src = include_directories('.')

lib = library(meson.project_name(), sources, include_directories : includes, install: true, dependencies: module_deps)
